// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelTemplates renders templates 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <div
        class="nhsuk-hint"
      >
        Choose one option
      </div>
      <div
        class="nhsuk-form-group"
      >
        <div
          class="nhsuk-radios"
          id="channelTemplate"
        >
          <table
            class="nhsuk-table-responsive"
            data-testid="channel-templates-table"
            id="channel-templates-table"
          >
            <thead
              class="nhsuk-table__head"
              role="rowgroup"
            >
              <tr
                class="nhsuk-table__row"
              >
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-select"
                  scope="col"
                >
                  Select
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-name"
                  scope="col"
                >
                  Name
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-type"
                  scope="col"
                >
                  Type
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-last-edited"
                  scope="col"
                >
                  Last edited
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-action"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              class="nhsuk-table__body"
            >
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="app-template-id-radio"
                      id="channelTemplate-app-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="app-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-app-template-id"
                      id="channelTemplate-app-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  app template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  NHS App message
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-nhs-app-template/abc/preview-template/app-template-id"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="email-template-id-radio"
                      id="channelTemplate-email-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="email-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-email-template-id"
                      id="channelTemplate-email-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  email template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Email
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-email-template/abc/preview-template/email-template-id"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="sms-template-id-radio"
                      id="channelTemplate-sms-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="sms-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-sms-template-id"
                      id="channelTemplate-sms-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  sms template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Text message (SMS)
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-text-message-template/abc/preview-template/sms-template-id"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="letter-template-id-radio"
                      id="channelTemplate-letter-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="letter-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-letter-template-id"
                      id="channelTemplate-letter-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  letter template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Standard letter
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-standard-english-letter-template/abc/preview-template/letter-template-id"
                      id="preview-template-link-3"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChannelTemplates renders templates with error state 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <div
        class="nhsuk-hint"
      >
        Choose one option
      </div>
      <div
        class="nhsuk-form-group nhsuk-form-group--error"
      >
        <span
          class="nhsuk-error-message"
          id="channelTemplate--error-message"
        >
          <span
            class="nhsuk-u-visually-hidden"
          >
            Error: 
          </span>
          You must select a template
        </span>
        <div
          aria-describedby="channelTemplate--error-message"
          class="nhsuk-radios"
          id="channelTemplate"
        >
          <table
            class="nhsuk-table-responsive"
            data-testid="channel-templates-table"
            id="channel-templates-table"
          >
            <thead
              class="nhsuk-table__head"
              role="rowgroup"
            >
              <tr
                class="nhsuk-table__row"
              >
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-select"
                  scope="col"
                >
                  Select
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-name"
                  scope="col"
                >
                  Name
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-type"
                  scope="col"
                >
                  Type
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-last-edited"
                  scope="col"
                >
                  Last edited
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-action"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              class="nhsuk-table__body"
            >
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="app-template-id-radio"
                      id="channelTemplate-app-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="app-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-app-template-id"
                      id="channelTemplate-app-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  app template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  NHS App message
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-nhs-app-template/abc/preview-template/app-template-id"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="email-template-id-radio"
                      id="channelTemplate-email-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="email-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-email-template-id"
                      id="channelTemplate-email-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  email template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Email
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-email-template/abc/preview-template/email-template-id"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="sms-template-id-radio"
                      id="channelTemplate-sms-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="sms-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-sms-template-id"
                      id="channelTemplate-sms-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  sms template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Text message (SMS)
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-text-message-template/abc/preview-template/sms-template-id"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="letter-template-id-radio"
                      id="channelTemplate-letter-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="letter-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-letter-template-id"
                      id="channelTemplate-letter-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  letter template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Standard letter
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-standard-english-letter-template/abc/preview-template/letter-template-id"
                      id="preview-template-link-3"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChannelTemplates renders templates with pre-selected template 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <div
        class="nhsuk-hint"
      >
        Choose one option
      </div>
      <div
        class="nhsuk-form-group"
      >
        <div
          class="nhsuk-radios"
          id="channelTemplate"
        >
          <table
            class="nhsuk-table-responsive"
            data-testid="channel-templates-table"
            id="channel-templates-table"
          >
            <thead
              class="nhsuk-table__head"
              role="rowgroup"
            >
              <tr
                class="nhsuk-table__row"
              >
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-select"
                  scope="col"
                >
                  Select
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-name"
                  scope="col"
                >
                  Name
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-type"
                  scope="col"
                >
                  Type
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-last-edited"
                  scope="col"
                >
                  Last edited
                </th>
                <th
                  class="nhsuk-table__header"
                  data-testid="channel-templates-table-header-template-action"
                  scope="col"
                />
              </tr>
            </thead>
            <tbody
              class="nhsuk-table__body"
            >
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="app-template-id-radio"
                      id="channelTemplate-app-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="app-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-app-template-id"
                      id="channelTemplate-app-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  app template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  NHS App message
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-nhs-app-template/abc/preview-template/app-template-id"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      checked=""
                      class="nhsuk-radios__input"
                      data-testid="email-template-id-radio"
                      id="channelTemplate-email-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="email-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-email-template-id"
                      id="channelTemplate-email-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  email template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Email
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-email-template/abc/preview-template/email-template-id"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="sms-template-id-radio"
                      id="channelTemplate-sms-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="sms-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-sms-template-id"
                      id="channelTemplate-sms-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  sms template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Text message (SMS)
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-text-message-template/abc/preview-template/sms-template-id"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
              <tr
                class="nhsuk-table__row"
              >
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Select 
                  </span>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="letter-template-id-radio"
                      id="channelTemplate-letter-template-id"
                      name="channelTemplate"
                      type="radio"
                      value="letter-template-id"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="channelTemplate-letter-template-id"
                      id="channelTemplate-letter-template-id--label"
                    >
                       
                    </label>
                  </div>
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Name 
                  </span>
                  letter template name
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Type 
                  </span>
                  Standard letter
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                    Last edited 
                  </span>
                  13th Jan 2025
                  <br />
                  10:19
                </td>
                <td
                  class="nhsuk-table__cell"
                  role="cell"
                >
                  <span
                    aria-hidden="true"
                    class="nhsuk-table-responsive__heading"
                  >
                     
                  </span>
                  <div
                    class="actionLinksWrapper"
                  >
                    <a
                      aria-label="Preview"
                      data-testid="preview-link"
                      href="/message-plans/choose-standard-english-letter-template/abc/preview-template/letter-template-id"
                      id="preview-template-link-3"
                    >
                      Preview
                    </a>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
